--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               csuyeon0105@gmail.com</a
             >
           </div>
-          <p class="lead mb-5">I am a computer science student, passionate about exploring and learning new technologies. Working with skilled individuals is a great way for me to expand my knowledge and gain experience. I enjoy taking on challenges and strive to excel in areas where I may not have innate talent.</p>
+          <p class="lead mb-5">I am a computer science student, passionate about exploring and learning new technologies. Working with skilled individuals is a great way for me to expand my knowledge and gain experience. I enjoy taking on challenges.</p>
 
           <div class="social-icons">
             <a
@@ -145,9 +145,9 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">Kolon Industry</h3>
+              <h3 class="mb-0"> System team localization Assistant</h3>
               <div class="subheading mb-3">
-                System team localization Assistant
+               Kolon Industry
               </div>
               <p>
                 Helped company’s new administrative software and SAP
